# guiltytargets

./: .flake8  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.rst  README_CONFIGURATION.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/source/: ppi_network_annotation.rst
src/guiltytargets/: __init__.py  __main__.py  cli.py  config.py  constants.py  download.py  gat2vec.py  pipeline.py
src/guiltytargets/ppi_network_annotation/: __init__.py  parsers.py  pipeline.py
src/guiltytargets/ppi_network_annotation/model/: __init__.py  attribute_network.py  filtered_network.py  gene.py  labeled_network.py  neighborhood_network.py  network.py
tests/: __init__.py  test_network.py
