##########################
# Setup.py Configuration #
##########################
[metadata]
name = guiltytargets
version = 0.0.3-dev
description = A tool for ranking potential targets for a given disease
long_description = file: README.rst

# URLs associated with the Project
url = https://github.com/guiltytargets/guiltytargets
download_url = https://github.com/guiltytargets/guiltytargets/releases
project_urls =
    Bug Tracker = https://github.com/guiltytargets/guiltytargets/issues
    Source Code = https://github.com/guiltytargets/guiltytargets
    Documentation = https://guiltytargets.readthedocs.io

# Author information
author = Özlem Muslu
author_email = ozlemmuslu@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    Target Prioritization
    Network Representation Learning
    Knowledge Graph Embeddings
    Systems Biology
    Networks Biology

[options]
install_requires =
    numpy
    pandas
    scipy
    scikit-learn
    python-igraph
    click
    tqdm
    easy-config

    mygene
    opentargets
    dataclasses-json

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    guiltytargets = guiltytargets.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = guiltytargets
omit =
    src/guiltytargets/__main__.py
    src/guiltytargets/cli.py
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/guiltytargets
    .tox/*/lib/python*/site-packages/guiltytargets

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
